--- a/share/css/style.css
+++ b/share/css/style.css
@@ -1,7 +1,7 @@
 @import '//fonts.googleapis.com/css?family=Lato:400,400italic|Arvo:700,400,400italic';
 
 body {
-    background: #F0EFE7;
+    background: #999;
     margin: 0;
     padding: 0;
     font: 15px/1.5 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -43,7 +43,7 @@ pre {
 }
 
 .wrapper {
-    max-width: 620px;
+    max-width: 850px;
     padding: 0 20px 40px 20px;
     margin: auto;
 }
