--- a/jcarousel.connected-carousels.css
+++ b/jcarousel.connected-carousels.css
@@ -79,11 +79,11 @@
 
 .connected-carousels .carousel-navigation li img {
     display: block;
-    border: 5px solid #7d7d7d;
+    border: 5px solid #fff;
 }
 
 .connected-carousels .carousel-navigation li.active img {
-    border-color: #fff;
+    border-color: #7d7d7d;
 }
 
 /** Stage carousel controls **/
