--- a/jcarousel.connected-carousels.css
+++ b/jcarousel.connected-carousels.css
@@ -9,9 +9,8 @@
 .connected-carousels .photo-credits {
     position: absolute;
     font-size: 13px;
-    color: #fff;
-    text-shadow: 0 0 1px rgba(0, 0, 0, 0.85);
-    opacity: .66;
+    color: #333;
+    font-weight: 800;
 }
 
 .connected-carousels .photo-credits a {
