--- a/share/css/style.css
+++ b/share/css/style.css
@@ -47,3 +47,10 @@ pre {
     padding: 0 20px 40px 20px;
     margin: auto;
 }
+
+@media only screen and (max-width: 600px) {
+  body {
+    transform: scale(1.5);
+   transform-origin: 0 0;
+  }
+}
