--- a/share/css/style.css
+++ b/share/css/style.css
@@ -49,8 +49,7 @@ pre {
 }
 
 @media only screen and (max-width: 600px) {
-  .wrapper {
-    transform: scale(1.75);
-   transform-origin: 0 0;
+  body {
+    width: 150%;
   }
 }
