--- a/share/css/style.css
+++ b/share/css/style.css
@@ -1,7 +1,7 @@
 @import '//fonts.googleapis.com/css?family=Lato:400,400italic|Arvo:700,400,400italic';
 
 body {
-    background: #999;
+    background: #cccccc;
     margin: 0;
     padding: 0;
     font: 15px/1.5 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
